the style of homepage is reseted and some changes were applied to Course model in UsersData/models.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,11 @@
   <noscript>You need enable javascript to this site works properly</noscript>
 </head>
 <body>
-  <nav id="navbar" class="row" style=" padding:1%; margin-bottom:1%; height:auto; background-color:#282C34;">
+  <nav id="navbar" class="row">
     <img class="col-3" src="{% static 'logo2.svg'  %}" style="position:relative; height:10%; float:left;" />
-    <div id="sub-navbar" style="float:right; border:solid white 1px;">
       <a href="https://github.com/navitux/workshops_project" target="_blank" style="text-decoration:none;"><button>Github</button></a>
       <a href=""><button id="login_button">Login</button></a>
       <a href=""><button id="signup_button">Signup</button></a>
-    </div>
   </nav>
   <h1>Welcome to Workshops, the e-learning tool</h1>
   <img src="{% static 'pet.svg'  %}"/>
