The homepage is fixed using the Tachyons CSS framework, I have changed the logo image, and some code cleaning in UsersData/models.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,55 +1,76 @@
 <!DOCTYPE html>
 <!-- Workshops Portal -->
 {% load static %}
-</body>
-<html lang='en'>
+<html>
 <head>
   <title>Workshops</title>
   <meta charset="UTF-8">
   <meta name="description" content="Main page of Workshops">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <noscript>You need enable javascript to this site works properly</noscript>
+  <link rel="icon" href="{% static 'icon.svg' %}">
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
 </head>
 <body>
-  <nav id="navbar" class="row">
-    <img class="col-3" src="{% static 'logo2.svg'  %}" style="position:relative; height:10%; float:left;" />
-      <a href="https://github.com/navitux/workshops_project" target="_blank" style="text-decoration:none;"><button>Github</button></a>
-      <a href=""><button id="login_button">Login</button></a>
-      <a href=""><button id="signup_button">Signup</button></a>
+
+  <nav class="pa3 pa4-ns">
+    <img class="w-50 pa2" src="{% static 'logo.svg' %}"/>
+    <div class="tc pb3">
+      <a class="no-underline near-white bg-animate bg-near-black
+        hover-bg-gray inline-flex items-center ma2 tc br2 pa2"
+        href="#"
+        target="_blank"
+        title="Login or SignUp">
+        <div class="h2" width="0"></div> <!-- This div is for give size consistency to this element as the next 'github' link -->
+        <span class="f6 ml3 pr2">Login/SignUp</span>
+      </a>
+      <a class="no-underline near-white bg-animate bg-near-black
+        hover-bg-gray inline-flex items-center ma2 tc br2 pa2"
+        href="https://github.com/navitux/workshops_project"
+        target="_blank" title="GitHub">
+        <svg class="dib h2 w2" fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 16 16"
+        fill-rule="evenodd"
+        clip-rule="evenodd"
+        stroke-linejoin="round"
+        stroke-miterlimit="1.414">
+        <path d="M8 0C3.58 0 0 3.582 0 8c0 3.535 2.292 6.533 5.47 7.59.4.075.547-.172.547-.385 0-.19-.007-.693-.01-1.36-2.226.483-2.695-1.073-2.695-1.073-.364-.924-.89-1.17-.89-1.17-.725-.496.056-.486.056-.486.803.056 1.225.824 1.225.824.714 1.223 1.873.87 2.33.665.072-.517.278-.87.507-1.07-1.777-.2-3.644-.888-3.644-3.953 0-.873.31-1.587.823-2.147-.083-.202-.358-1.015.077-2.117 0 0 .672-.215 2.2.82.638-.178 1.323-.266 2.003-.27.68.004 1.364.092 2.003.27 1.527-1.035 2.198-.82 2.198-.82.437 1.102.163 1.915.08 2.117.513.56.823 1.274.823 2.147 0 3.073-1.87 3.75-3.653 3.947.287.246.543.735.543 1.48 0 1.07-.01 1.933-.01 2.195 0 .215.144.463.55.385C13.71 14.53 16 11.534 16 8c0-4.418-3.582-8-8-8"/></svg>
+        <span class="f6 ml3 pr2">GitHub</span>
+      </a>
+    </div>
   </nav>
-  <h1>Welcome to Workshops, the e-learning tool</h1>
-  <img src="{% static 'pet.svg'  %}"/>
-  <div/>
-  <div id="about">
-    <h2>About</h2>
-    <p align="justify">This is Workshops, is a project created to manage student lists and
-      educational content in an easy and adaptable way from low income public
-      schools (with low resource computers) to large courses with many students
-      in an organization, company or a college compatible with each other,
-      built under a free software license in Django.
-    </p>
-    <hr>
-  </div>
 
-  <section id="features">
-    <h2>Features</h2>
-    <ul>
-      <li>Free and Open Source</li>
-      <li>Easy to use</li>
-      <li>Easy instalation</li>
-    </ul>
-    <hr>
-  </section>
+  <img style="position:fixed; left:0; z-index:-1; height:40%;" src="{% static 'pet.svg'  %}"/>
 
-  <section id="contact">
-    <h2>Contact</h2>
-      <a href="mailto:navitux@disroot.org" style="none">
-      navitux@disroot.org
-      </a>
-      <br>
-      <a href="https://github.com/navitux/" target="_blank">
-      github.com/navitux
-      </a>
-  </section>
+  <article class="center ph3 ph5-ns ph0-l mw6">
+  <h1 class="f3 f2-m f1-l">About</h1>
+  <p class="measure lh-copy" align="justify">
+    This is Workshops, is a project created to manage student
+    lists and educational content in an easy and adaptable way from low income
+    public schools (with low resource computers) to large courses with many
+    students in an organization, company or a college compatible with each
+    other, built under a free software license in Django.
+  </p>
+</article>
+
+<article class="center ph3 ph5-ns ph0-l mw6">
+<h1 class="f3 f2-m f1-l">Features</h1>
+  <p>Free and Open Source</p>
+  <p>Easy to use</p>
+  <p>Easy instalation</p>
+</article>
+
+<article class="center ph3 ph5-ns ph0-l mw6">
+<h1 class="f3 f2-m f1-l">Contact</h1>
+<a href="mailto:navitux@disroot.org" style="none">
+navitux@disroot.org
+</a>
+<br/>
+<a href="https://github.com/navitux/" target="_blank">
+github.com/navitux
+</a>
+</article>
+<br/>
 </body>
 </html>
