Updates made to task's list to focus in other components

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 
-  <nav class="pa3 pa4-ns">
-    <img class="w-50 pa2" src="{% static 'logo.svg' %}"/>
+  <nav class="center ph3 ph5-ns ph0-l mw7">
+    <img class="w-50 center " src="{% static 'logo.svg' %}"/>
     <div class="tc pb3">
       <a class="no-underline near-white bg-animate bg-near-black
         hover-bg-gray inline-flex items-center ma2 tc br2 pa2"
