The UsersData/admin.py file was modified to add its models to django admin interface, The user accounts are available now and the login, signup and logout can be performed successfully, the initial front-end forms to add courses and course's types are now available with backend process pending

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
+{% if error %}
+{{ error }}
+<br />
+<br />
+{% endif %}
   {% load staticfiles %}
   <nav class="center ph3 ph5-ns ph0-l mw7">
     <div class="tc pb3">
