--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,18 @@
   <noscript>You need enable javascript to this site works properly</noscript>
   <link rel="icon" href="{% static 'icon.svg' %}">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
+  <style>
+	*{
+	font-family:sans-serif;
+	}
+  </style>
   <title>Workshops</title>
 </head>
 <body>
 
   <nav class="pa1" style="background-color:#393D46;">
     <!-- Home Button -->
-    <a class="link dim dib pa2" href="{%url 'index'%}" title="Home">
+    <a class="link dim dib pa2" href="{%url 'index'%}" title="Go to home page">
       <img src="{% static 'icon.svg' %}" style="height:50px;"/>
     </a>
     <!-- ............... -->
@@ -21,8 +26,10 @@
     <a class="fr no-underline near-white bg-animate bg-near-black
       hover-bg-gray inline-flex items-center ma2 tc br2 pa2"
       href="javascript:{document.getElementById('logout').submit()}"
-      onclick=""><span class="f6 ml3 pr2 pa1">Logout</span></a>
-    <p class="fr near-white"> Hello {{ user.username }} </p>
+      onclick=""title="Log out to end session"><span class="f6 ml3 pr2 pa1">Logout</span></a>
+    <p class="fr near-white"title="This is your username"> Hello {{ user.username }} </p>
+	<a class="fr link no-underline near-white bg-animate ma2 tc br2 pa2"
+      href="{% url 'dashboard' %}"title="Go to your dashboard">Dashboard</a>
     <form id="logout" method="POST" action="{% url 'logout' %}">
     {% csrf_token %}
     <input type="hidden" />
