--- a/templates/index.html
+++ b/templates/index.html
@@ -32,20 +32,27 @@
   <article class="center ph3 ph5-ns ph0-l mw6">
   <b class="f4">About</b>
   <p class="measure lh-copy" align="justify">
-    This is Workshops (still in a beta phase), is a project created to manage student
-    lists and educational content in an easy and adaptable way from low income
-    public schools (with low resource computers) to large courses with many
-    students in an organization, company or a college compatible with each
-    other, built under a free software license in Django.
+    This is Workshops (still in a beta phase), is a project created at first
+	to manage educational content in an easy and adaptable way from low 
+	income public schools (with low resource computers) to large courses 
+	with many students in an organization, company or a college compatible 
+	with each other, built under a free software license (this version is 
+	implemented with Django's technology).
   </p>
 </article>
 
 <article class="center ph3 ph5-ns ph0-l mw6">
-<b class="f4">Features</b>
-  <ul>
+<b class="f4">Features</nb>
+  <ul align="justify">
     <li>Free and Open Source</li>
     <li>Easy to use</li>
-    <li>Easy instalation</li>
+	<li>Easy instalation</li>
+	<li>Easy user registration</li>
+	<li>Allows upload your own courses or take courses made by the users</li>
+	<li>Allows manage your lists of courses or your courses taken</li>
+	<li>Allows set policies to your courses</li>
+	<li>Allows make user's list who take your courses and export them (with explicit permission from the users)</li>
+	<li>Allows import/export your own courses in a single file</li>
   </ul>
 </article>
 
