No necessary files are deleted and changes in html files for UI

--- a/templates/SignUpIn/signupin.html
+++ b/templates/SignUpIn/signupin.html
@@ -19,6 +19,7 @@
     <br/>
     <button type="submit">Login</button>
   </form>
+  <small>If you don't able to logging in, contact the administrator</small>
 </section>
 
 <section class="fr w-50 dib pa2">
