--- a/templates/index.html
+++ b/templates/index.html
@@ -33,16 +33,16 @@
   <b class="f4">About</b>
   <p class="measure lh-copy" align="justify">
     This is Workshops (still in a beta phase), is a project created at first
-	to manage educational content in an easy and adaptable way from low 
-	income public schools (with low resource computers) to large courses 
-	with many students in an organization, company or a college compatible 
-	with each other, built under a free software license (this version is 
+	to manage educational content in an easy and adaptable way from low
+	income public schools (with low resource computers) to large courses
+	with many students in an organization, company or a college compatible
+	with each other, built under a free software license (this version is
 	implemented with Django's technology).
   </p>
 </article>
 
 <article class="center ph3 ph5-ns ph0-l mw6">
-<b class="f4">Features</nb>
+<b class="f4">Features</b>
   <ul align="justify">
     <li>Free and Open Source</li>
     <li>Easy to use</li>
