--- a/templates/SignUpIn/signupin.html
+++ b/templates/SignUpIn/signupin.html
@@ -1,17 +1,13 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block content %}
-{% if error %}
-{{ error }}
-<br />
-<br />
-{% endif %}
 <section class="fl w-50 dib pa2">
   <b>Login:</b>
   <form id="login" action="{% url 'login' %}" method="post">
     {% csrf_token %}
     <label class="w-30" for="username">Username:</label>
     <br/>
-    <input class="w-30" type="text" name="username" required/>
+    <input class="w-30" type="text" name="username" maxlength="150" required/>
     <br/>
     <label class="w-30" for="password">Password:</label>
     <br/>
@@ -28,23 +24,49 @@
     {% csrf_token %}
     <label for="username_r">Username:</label>
     <br/>
-    <input type="text" name="username_r" required />
+    <input type="text" name="username_r" maxlength="150" required />
+    <img
+  	id="help-username_r"
+  	src="{% static 'awesome-info.svg' %}"
+  	class="img dib v-mid"
+  	style="height:1.5em;"/>
+      <br/>
     <br/>
     <label for="firstname">First name(s):</label>
     <br/>
-    <input type="text" name="firstname" required />
+    <input type="text" name="firstname" maxlength="150" required />
+    <img
+  	id="help-firstname"
+  	src="{% static 'awesome-info.svg' %}"
+  	class="img dib v-mid"
+  	style="height:1.5em;"/>
     <br/>
     <label for="lastname">Last name(s):</label>
     <br/>
-    <input type="text" name="lastname" required />
+    <input type="text" name="lastname" maxlength="150" required />
+    <img
+  	id="help-lastname"
+  	src="{% static 'awesome-info.svg' %}"
+  	class="img dib v-mid"
+  	style="height:1.5em;"/>
     <br/>
     <label for="email">E-mail:</label>
     <br/>
     <input type="email" name="email"/>
+    <img
+  	id="help-email"
+  	src="{% static 'awesome-info.svg' %}"
+  	class="img dib v-mid"
+  	style="height:1.5em;"/>
     <br/>
     <label for="password1">Password:</label>
     <br/>
     <input type="password" name="password1" required/>
+    <img
+  	id="help-password1"
+  	src="{% static 'awesome-info.svg' %}"
+  	class="img dib v-mid"
+  	style="height:1.5em;"/>
     <br/>
     <label for="password2">Confirm Password:</label>
     <br/>
@@ -53,4 +75,41 @@
     <button type="submit">Register</button>
   </form>
 </section>
+
+<script>
+      // With the above scripts loaded, you can call `tippy()` with a CSS
+      // selector and a `content` prop:
+			var idies;
+			var content;
+			function tippies(idies,content){
+				tippy(idies, {
+        	content: content,
+					placement: 'right-start',
+					interactive: true,
+      	});
+		}
+		tippies('#help-username_r','Your username must be unique and its maximum\
+                                length is of 150 alphanumerical characters');
+    tippies('#help-firstname','Your first name(s) can have as maximum of\
+                                150 alphanumerical characters of length');
+    tippies('#help-lastname','Your last name(s) can have as maximum of\
+                                150 alphanumerical characters of length');
+    tippies('#help-email','This field is not mandatory but it can help to\
+                           others users and administrators to get in touch with\
+                           you');
+    tippies('#help-password1','Is recommended that your password have 10 or \
+                               more alphanumerical characters');
+</script>
+{% if success %}
+<div class="alert-box success" style="color:black;">
+	<span style="color:black;">success: </span>
+	{{success}}
+</div>
+{% endif %}
+{% if error %}
+<div class="alert-box error" style="color:black;">
+	<span style="color:black;">error: </span>
+	{{error}}
+</div>
+{% endif %}
 {% endblock %}
